dataset1235/2025-2/610742602/users/4074228937/executions/906907063_146336312.log
== RUN (2025-08-20 23:53:49)
-- CODE: 
print(round(50//3), 0, "")
print(round(moedas % guerreiros), 0, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(moedas % guerreiros), 0, "")
                ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(moedas % guerreiros), 0, "")
                ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:50:53)
-- CODE: 
print(round(50/3), 0, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17 0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:53:21)
-- CODE: 
print(round(50//3), 0, "")
print(moedas % guerreiros, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(moedas % guerreiros, "")
          ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(moedas % guerreiros, "")
          ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:52:34)
-- CODE: 
print(round(50//3), 0, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:53:15)
-- CODE: 
print(round(50//3), 0, "")
print(moedas%guerreiros, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(moedas%guerreiros, "")
          ^^^^^^
NameError: name 'moedas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(moedas%guerreiros, "")
          ^^^^^^
NameError: name 'moedas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:54:34)
-- CODE: 
print(50//3, "")
print(50 % 3, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:54:08)
-- CODE: 
print(round(50//3), 0, "")
print(round(50 % 3), 0, "")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:54:36)
-- CODE: 
print(50//3, "")
print(50 % 3, "")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:54:12)
-- CODE: 
print(round(50//3), 0, "")
print(round(50 % 3), 0, "")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2 0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
